travail sur la partie scss

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1 class="h1">Discover Best Recipes</h1>
             <input type="text" id="search-bar" placeholder="search ....."  class="input">
             <div class="div">
-            <p class="para"> </p>
+            <p class="para"> <img src="" alt=""></p>
              <p class="para"> </p>
               <p class="para"> </p>
               <p class="para"></p>
